--- a/app/less/main.less
+++ b/app/less/main.less
@@ -7,6 +7,9 @@ body {
     -webkit-background-size: cover;
     background-size: cover;
 }
+h1,h2,h3,h4,p{
+    font-family: "MyriadProRegular", sans-serif;
+}
 
 header {
     background-image: url('../img/Layer-31.jpg');
@@ -147,7 +150,7 @@ nav {
         text-decoration: none;
         padding: 5px;
         background: #fdfdfd;
-        border-radius: 25px;
+        border-radius: 50%;
         border: 1px solid #fdfdfd;
         margin-right: 10px;
         cursor: pointer;
@@ -168,50 +171,177 @@ nav {
     }
 }
 
+.my-social-2{
+    padding: 10px 58px;
+    height: 70px;
+    li{
+        width: 45px;
+        height: 45px;
+        display: block;
+        float: left;
+        text-decoration: none;
+        padding: 8px 15px;
+        border: 2px solid #828282;
+        border-radius: 50%;
+        margin-right: 3px;
+        cursor: pointer;
+        i{
+            color: #828282;
+        }
+        &:nth-child(1) {
+            padding: 8px 10px;
+        }
+    }
+}
+
 .my-carousel{
     height: 100%;
-    padding: 5% 0 5% 0;
     h3 {
-        color: #ffffff;
-        width: 52%;
-        margin: 0 auto;
-        padding-bottom: 30px;
+        font-family: "MyriadProBold", sans-serif;
+        color: #fdfffc;
+        font-size: 42px;
+        margin-bottom: 30px;
+        b{
+            color: #7fa668;
+        }
     }
     p {
-        width: 50%;
+        font-size: 22px;
         color: #d0d0d0;
-        font-style: italic;
-        margin: 0 auto;
-        padding-bottom: 30px;
+        margin-bottom: 30px;
+        b{
+            color: #f9b801;
+            font-size: 26px;
+            font-weight: bold;
+        }
+    }
+    .my-indicators{
+        position: relative;
+        top: 90px;
+        li{
+            background: #ffffff;
+        }
+        .active{
+            width: 16px;
+            height: 16px;
+        }
     }
 }
 .my-control-icon {
     position: absolute;
     width: 100%;
-    top: 50%;
+    top: 10%;
     a {  
-    margin: 0 10% 0 10%;
     height: 50px;
     width: 50px;
-    background-color: rgba(138, 160, 159, 0.42);
+    background: rgba(138, 160, 159, 0.42);
     border: 1px solid rgba(138, 160, 159, 0.42);
-    -webkit-border-radius: 25px;
-    border-radius: 25px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+        &:hover,
+        &:focus{
+            background: #fefefe;
+        }
     }
-    
-    i {
+    i{
         font-size: 55px;
         font-weight: 900;
         color: #003e3d;
     }
 }
+
 .my-control-left {
     float: left;
+    margin-left: 100px;
+    i {
+        position: relative;
+        bottom: 5px;
+        left: 9px; 
+    }
 }
 
 .my-control-right {
     float: right;
+    margin-right: 100px;
+    i {
+        position: relative;
+        left: 16px;
+        bottom: 5px;
+    }
 }
+
 .my-carousel-inner {
+    margin-top: 100px;
     text-align: center;
+}
+
+.my-btn-success{
+    padding: 6px 7px;
+    border: 1px solid #ffffff;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    background: transparent;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.my-btn-order{
+    padding: 5px 25px;
+    border: 2px solid #7fa668;
+    -webkit-border-radius: 2px;
+    border-radius: 15px;
+    background: transparent;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: bold;
+    color: #7fa668;
+}
+
+.my-main-top{
+    border-bottom: 1px solid #e3e3e3;
+    p{
+        color: #ccc;
+        font-size:  19px;
+    }
+}
+
+.my-title{
+    text-align: center;
+    padding: 40px 0;
+    h1{
+        color: #666261;
+        font-weight: bold;
+        margin-bottom: 30px;
+    }
+}
+
+.my-blk-product{
+    width: 350px;
+    height: 100%;
+    margin: 0 20px 30px 20px;
+    padding: 20px;
+    border: 1px solid #e3e3e3;
+    border-radius: 3%;   
+    p{
+        text-align: center;
+        padding: 5px;
+    }
+    span{
+        font-size: 52px;
+        font-weight: bold;
+        margin: 0 10px 0 75px;
+    }
+    i{
+        color: #df0020;
+    }
+    button{
+        margin: 10px 29% 0 29%;
+        &:hover,
+        &:focus{
+            background: #7fa668;
+            color: #ffffff;
+        }
+    }
 }
