--- a/app/less/main.less
+++ b/app/less/main.less
@@ -345,3 +345,29 @@ nav {
         }
     }
 }
+
+.my-blk-certi{
+    background: url(../img/Layer-16-copy.jpg);
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+// .carousel-inner {
+//     .active.left {
+//         left: -25%; 
+//     }
+//     .next{
+//          left:  25%; 
+//     }
+//     .prev{ 
+//         left: -25%; 
+//     }
+// }
+// .carousel-control{
+//     width:  4%; 
+//     &.left,
+//     &.right{
+//         margin-left:15px;
+//         background-image:none;
+//     }
+// }
