--- a/app/less/main.less
+++ b/app/less/main.less
@@ -299,12 +299,19 @@ nav {
     color: #7fa668;
 }
 
-.my-main-top{
-    border-bottom: 1px solid #e3e3e3;
+.my-btn-question{
+    
+}
+
+.my-main-txt{
     p{
-        color: #ccc;
+        color: #999999;
         font-size:  19px;
     }
+}
+
+.my-br{
+    border-bottom: 2px solid #e3e3e3;
 }
 
 .my-title{
@@ -435,4 +442,32 @@ transform: scale(@sumSc);
 position:relative;      
 z-index: 9999;  
   }
+}
+
+.my-blk-tips{
+    text-align: left;
+    h1{
+        font-size: 18px;
+    }
+    p{
+        font-size: 17px;
+    }
+}
+
+.my-news{
+    h1{
+        &::before {
+            content: "";
+            position: absolute;
+            top: 90px;
+            height: 3px;
+            width: 155px;
+            background: #9d9d9d;
+        }
+    }
+}
+
+.aboutus{
+    background-color: #efefef;
+    padding: 0 136px;
 }
